# gaesup-world

./: .cursorignore  .cursorrules  .eslintrc.json  .gitignore  .npmignore  .pnp.cjs  .prettierignore  .prettierrc  .releaserc.json  .windsurfrules  .yarnrc.yml  ADMIN_ANALYSIS.md  AGENTS.md  ANALYSIS.md  CAMERA_REFACTOR_PLAN.md  DOCK.md  EventBus-Ck0Dwee2.js  EventBus-DjA75MWC.cjs  LEGACY_ANALYSIS.md  LICENSE  README.md  README_IMPROVEMENTS.md  REFACTOR.md  REFACTORING_PLAN.md  REFACTOR_PLAN.md  STYLE_RULES.md  TESTING.md  admin-entry.d.ts  admin.cjs  admin.js  api-B58jaq5T.cjs  api-BRV101Zn.js  assetStore-DVPge_2j.cjs  assetStore-mAClONjR.js  assets.cjs  assets.js  authority-BOPCXUrV.cjs  authority-CysRQudy.js  blueprints-editor.cjs  blueprints-editor.js  (+83 more)
.claude/: settings.json
.cursor/: mcp.json
.scripts/: chrome-perf-mcp.js
assets/: index--6GUBCe7.css  index--8tq3Ybl.js  index-0apCw0xq.js  index-0r3RF2uF.js  index-1TbubNd5.js  index-2VmCZcKt.css  index-2qRJXnRr.js  index-5NZECcZS.css  index-6FrXJodc.css  index-7FKOs8hi.js  index-7OZkwTp2.js  index-93Fp0KtE.js  index-9VzEICBw.js  index-9Yrvnhb2.css  index-AjAOjedc.js  index-BNMRMebk.js  index-BegIKgjQ.js  index-BlZXt5Gt.js  index-C4mSkY-D.js  index-CC28nRgi.js  index-CG6XJxGK.css  index-C_yVOqIR.js  index-DldFidTp.js  index-EMyLyJHW.js  index-EjaRmftc.css  index-EzywIBfB.css  index-F5UzYHqK.js  index-FZUyxoeu.js  index-FssQDoZ5.css  index-GZIdKS39.js  index-Gq-64C7q.css  index-HxBZCghG.js  index-ITCrqU4O.css  index-JDJplymj.js  index-JjnUqvmK.js  (+94 more)
server/: index.js  main.py  policy.js  pyproject.toml
src/: App.tsx  (+12 more)
(+4194 files in other folders)
