[project]
name = "gaesup-policy-server"
version = "0.1.0"
description = "FastAPI policy server for reinforcement NPC control"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
]

[tool.uv]
package = false
